Fixed last image not showing

--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@ body, html{
 }
 
 .main-section{
-    background-image: url(/images/desktop/image-header.jpg);
+    background-image: url(images/desktop/image-header.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;    
